<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViaEmailActivity"
    android:background="@color/backgroundGray">

    <ImageView
        android:id="@+id/yellowabstractshape1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="fitStart"
        android:src="@drawable/yellow_abstract_shape_1"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/yellowabstractshape2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:alpha=".2"
        android:contentDescription="@string/todo"
        android:scaleType="fitStart"
        android:src="@drawable/yellow_abstract_shape_2"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/backbutton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        android:contentDescription="@string/button" />

    <TextView
        android:id="@+id/via_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/graduate"
        android:text="@string/email_message"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/some_text3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/graduate"
        android:text="@string/email_text"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/via_email"
        app:layout_constraintVertical_bias="0.016" />

    <ImageView
        android:id="@+id/birdwithsms_image1"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/bird_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/some_text3"
        app:layout_constraintVertical_bias="0.078"
        android:contentDescription="@string/birdimage" />

    <EditText
        android:id="@+id/forgotpassword_viaemail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birdwithsms_image1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/email_next_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_yellow_button"
        android:text="@string/next"
        android:fontFamily="@font/graduate"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotpassword_viaemail" />

</androidx.constraintlayout.widget.ConstraintLayout>