<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <ImageView
            android:id="@+id/birdlogowithwhitecircle"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/todo"
            android:src="@drawable/birdwhitecircle"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>
    <TextView
        android:id="@+id/WelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/graduate"
        android:text="@string/Welcome_to_bird"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeBack"
        tools:layout_editor_absoluteX="25dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="8dp"
        android:hint="@string/Password"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        tools:layout_editor_absoluteX="5dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graduate"
        android:text="@string/forgot_password"
        android:textAlignment="viewEnd"
        android:layout_marginEnd="10dp"
        android:textColor="@color/orange"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias="0.029"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbutton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:background="@drawable/custom_yellow_button"
        android:fontFamily="@font/graduate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotpassword"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/registerhere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graduate"
        android:text="@string/don_t_have_an_account_register_here"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton"
        app:layout_constraintVertical_bias="0.106" />

</androidx.constraintlayout.widget.ConstraintLayout>