<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tech_RegisterActivity"
    android:background="@color/lighter">

    <!-- Bird Image Background Design -->
    <ImageView
        android:id="@+id/birdImage1"
        android:layout_width="700dp"
        android:layout_height="900dp"
        android:contentDescription="@string/reg_background"
        android:scaleType="fitCenter"
        android:src="@drawable/bird_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graduate"
        android:text="@string/reg_welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <!-- First Name TextBox -->
    <EditText
        android:id="@+id/register_technician_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/reg_technician_name"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/Welcome"
        tools:layout_editor_absoluteX="5dp"
        android:inputType="textPersonName"
        android:autofillHints="name" />

    <!-- Contact Number TextBox -->
    <EditText
        android:id="@+id/register_technician_contactNum"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="8dp"
        android:hint="@string/reg_technician_contact_number"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/register_technician_name"
        tools:layout_editor_absoluteX="5dp"
        android:autofillHints="phone"
        android:inputType="phone" />

    <!-- Address TextBox -->
    <EditText
        android:id="@+id/register_technician_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="12dp"
        android:hint="@string/reg_technician_address"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/register_technician_contactNum"
        tools:layout_editor_absoluteX="5dp"
        android:autofillHints="postalAddress"
        android:inputType="textPostalAddress" />

    <!-- Password TextBox -->
    <EditText
        android:id="@+id/register_technician_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="8dp"
        android:hint="@string/reg_technician_password"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/register_technician_address"
        app:passwordToggleEnabled="true"
        tools:layout_editor_absoluteX="5dp"
        android:autofillHints="password"
        android:inputType="textVisiblePassword" />

    <!-- Confirm Password TextBox -->
    <EditText
        android:id="@+id/register_technician_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="8dp"
        android:hint="@string/reg_technician_confirm_password"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/register_technician_password"
        app:passwordToggleEnabled="true"
        tools:layout_editor_absoluteX="5dp"
        android:autofillHints="password"
        android:inputType="textVisiblePassword" />

    <!-- Registration Button
            -> Redirects to the LoginActivity (Once the user has filled in the blanks with
               the correct information) -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/technician_registerbutton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/graduate"
        android:text="@string/reg_technician_register_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_technician_confirm_password"
        app:layout_constraintVertical_bias="0.055" />

    <!-- Login Text
           -> Redirects to the LoginActivity -->
    <TextView
        android:id="@+id/technician_loginhere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graduate"
        android:text="@string/reg_technician_login_here"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/technician_registerbutton"
        app:layout_constraintVertical_bias="0.229" />

</androidx.constraintlayout.widget.ConstraintLayout>